Site Settings Desktop: Fix bug with deleting manually added exceptions.

This is accomplished by using the embedderOrigin more
consistently throughout.

BUG=639208
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2269963003
Cr-Commit-Position: refs/heads/master@{#414698}

Former-commit-id: 58420c6d82b10a7d1fcd636694f8b50dae3b3f3b