content/public/test/test_web_ui.cc
@@ -62,15 +62,15 @@ void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name) {
 void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name,
                                              const base::Value& arg1) {
   call_data_.push_back(new CallData(function_name));
-  call_data_.back()->TakeAsArg1(arg1.DeepCopy());
+  call_data_.back()->TakeAsArg1(arg1.CreateDeepCopy());
 }
 
 void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name,
                                              const base::Value& arg1,
                                              const base::Value& arg2) {
   call_data_.push_back(new CallData(function_name));
-  call_data_.back()->TakeAsArg1(arg1.DeepCopy());
-  call_data_.back()->TakeAsArg2(arg2.DeepCopy());
+  call_data_.back()->TakeAsArg1(arg1.CreateDeepCopy());
+  call_data_.back()->TakeAsArg2(arg2.CreateDeepCopy());
 }
 
 void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name,
@@ -78,9 +78,9 @@ void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name,
                                              const base::Value& arg2,
                                              const base::Value& arg3) {
   call_data_.push_back(new CallData(function_name));
-  call_data_.back()->TakeAsArg1(arg1.DeepCopy());
-  call_data_.back()->TakeAsArg2(arg2.DeepCopy());
-  call_data_.back()->TakeAsArg3(arg3.DeepCopy());
+  call_data_.back()->TakeAsArg1(arg1.CreateDeepCopy());
+  call_data_.back()->TakeAsArg2(arg2.CreateDeepCopy());
+  call_data_.back()->TakeAsArg3(arg3.CreateDeepCopy());
 }
 
 void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name,
@@ -88,7 +88,11 @@ void TestWebUI::CallJavascriptFunctionUnsafe(const std::string& function_name,
                                              const base::Value& arg2,
                                              const base::Value& arg3,
                                              const base::Value& arg4) {
-  NOTREACHED();
+  call_data_.push_back(new CallData(function_name));
+  call_data_.back()->TakeAsArg1(arg1.CreateDeepCopy());
+  call_data_.back()->TakeAsArg2(arg2.CreateDeepCopy());
+  call_data_.back()->TakeAsArg3(arg3.CreateDeepCopy());
+  call_data_.back()->TakeAsArg4(arg4.CreateDeepCopy());
 }
 
 void TestWebUI::CallJavascriptFunctionUnsafe(
@@ -108,16 +112,20 @@ TestWebUI::CallData::CallData(const std::string& function_name)
 TestWebUI::CallData::~CallData() {
 }
 
-void TestWebUI::CallData::TakeAsArg1(base::Value* arg) {
-  arg1_.reset(arg);
+void TestWebUI::CallData::TakeAsArg1(std::unique_ptr<base::Value> arg) {
+  arg1_ = std::move(arg);
 }
 
-void TestWebUI::CallData::TakeAsArg2(base::Value* arg) {
-  arg2_.reset(arg);
+void TestWebUI::CallData::TakeAsArg2(std::unique_ptr<base::Value> arg) {
+  arg2_ = std::move(arg);
 }
 
-void TestWebUI::CallData::TakeAsArg3(base::Value* arg) {
-  arg3_.reset(arg);
+void TestWebUI::CallData::TakeAsArg3(std::unique_ptr<base::Value> arg) {
+  arg3_ = std::move(arg);
+}
+
+void TestWebUI::CallData::TakeAsArg4(std::unique_ptr<base::Value> arg) {
+  arg4_ = std::move(arg);
 }
 
 }  // namespace content
