content/public/test/test_web_ui.h
@@ -70,20 +70,23 @@ class TestWebUI : public WebUI {
     explicit CallData(const std::string& function_name);
     ~CallData();
 
-    void TakeAsArg1(base::Value* arg);
-    void TakeAsArg2(base::Value* arg);
-    void TakeAsArg3(base::Value* arg);
+    void TakeAsArg1(std::unique_ptr<base::Value> arg);
+    void TakeAsArg2(std::unique_ptr<base::Value> arg);
+    void TakeAsArg3(std::unique_ptr<base::Value> arg);
+    void TakeAsArg4(std::unique_ptr<base::Value> arg);
 
     const std::string& function_name() const { return function_name_; }
     const base::Value* arg1() const { return arg1_.get(); }
     const base::Value* arg2() const { return arg2_.get(); }
     const base::Value* arg3() const { return arg3_.get(); }
+    const base::Value* arg4() const { return arg4_.get(); }
 
    private:
     std::string function_name_;
     std::unique_ptr<base::Value> arg1_;
     std::unique_ptr<base::Value> arg2_;
     std::unique_ptr<base::Value> arg3_;
+    std::unique_ptr<base::Value> arg4_;
   };
 
   const ScopedVector<CallData>& call_data() const { return call_data_; }
